fix: fix chatBtn z-index

--- a/src/components/Chat/Chat.module.scss
+++ b/src/components/Chat/Chat.module.scss
@@ -16,6 +16,7 @@
   border-radius: 4px 4px 0 0;
   box-shadow: 0 4px 20px 0 rgba(28, 28, 51, 0.16);
   cursor: pointer;
+  z-index: 6;
 }
 
 .chatDialog {
